--- a/ChangeLog
+++ b/ChangeLog
@@ -1,5 +1,11 @@
 2025-03-27 GarlicDude <https://github.com/ThatGarlicDude>
 
+	Libpacset Version 0.0.4-alpha
+	* Added filePathPrinter.
+	* Did more debugging.
+
+2025-03-27 GarlicDude <https://github.com/ThatGarlicDude>
+
 	Libpacset Version 0.0.3-alpha
 	* Added filePathGetter.
 	* Getting the size and filePaths of the FilePathArray is moved to that filePathGetter.
