--- a/AUTHORS
+++ b/AUTHORS
@@ -1,4 +1,4 @@
-Libpacset is created by GarlicDude.
+LibPacSet is created by GarlicDude.
 	GITHUB: https://github.com/ThatGarlicDude
 	YOUTUBE: https://www.youtube.com/@ThatGarlicDude
 	BLUESKY: https://bsky.app/profile/thatgarlicdude.bsky.social
