--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,9 @@
+2025-05-01 GarlicDude <https://github.com/ThatGarlicDude>
+
+	LibPacSet Version 1.0.1
+	* Shared library no longer needs to be installed to /usr/local/lib anymore.
+	* Library is now treated as a submodule for other projects.
+
 2025-04-30 GarlicDude <https://github.com/ThatGarlicDude>
 
 	LibPacSet Version 1.0.0
