--- a/ChangeLog
+++ b/ChangeLog
@@ -1,5 +1,10 @@
 2025-05-13 GarlicDude <https://www.github.com/ThatGarlicDude>
 
+	LibPacSet Version 1.1.1
+	* Made the title image a header.
+
+2025-05-13 GarlicDude <https://www.github.com/ThatGarlicDude>
+
 	LibPacSet Version 1.1.0
 	* Added an assets directory, containing the logo, icon, and title.
 	* README.md now uses the stylized title image for its header.
