--- a/ChangeLog
+++ b/ChangeLog
@@ -1,5 +1,10 @@
 2025-05-25 GarlicDude <https://www.github.com/ThatGarlicDude>
 
+	LibPacSet Version 1.4.1
+	* Reverted change for including the headers directory.
+
+2025-05-25 GarlicDude <https://www.github.com/ThatGarlicDude>
+
 	LibPacSet Version 1.4.0
 	* Added INSTALL.md!
 	* CMakeLists.txt is much cleaner than it was before.
