Polishing stuff up.

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,10 @@
+2025-05-26 GarlicDude <https://www.github.com/ThatGarlicDude>
+
+	LibPacSet Version 1.5.0
+	* Updated INSTALL.md to be more beginner-friendly.
+	* Polished the project's icon, logo, and title.
+	* Updated the README.md page, polishing up the overview and featuring the copyright disclaimer.
+
 2025-05-25 GarlicDude <https://www.github.com/ThatGarlicDude>
 
 	LibPacSet Version 1.4.1
