--- a/docs/CHANGELOG
+++ b/docs/CHANGELOG
@@ -1,3 +1,11 @@
+2025-07-16 GarlicDude <https://www.github.com/ThatGarlicDude>
+
+	LibPacIO Version 3.1.1
+	* Updated the include directory.
+		* Renamed main to libpacio.
+	* Updated CMakeLists.txt.
+	* LibPacIO now uses Git tags.
+
 2025-07-02 GarlicDude <https://www.github.com/ThatGarlicDude>
 
 	LibPacIO Version 3.1.0
