--- a/docs/CHANGELOG
+++ b/docs/CHANGELOG
@@ -1,3 +1,9 @@
+2025-07-23 GarlicDude <https://www.github.com/ThatGarlicDude>
+
+	LibPacIO Version 3.2.1
+	* All headers now include the shortcut header, which leads to the master header.
+	* Same for the source files.
+
 2025-07-18 GarlicDude <https://www.github.com/ThatGarlicDude>
 
 	LibPacIO Version 3.2.0
